[gd_scene load_steps=19 format=3 uid="uid://p04j5jtsnw4v"]

[ext_resource type="Script" uid="uid://y6fytuvdkxun" path="res://Scripts/end_of_level_door.gd" id="1_mk7qj"]
[ext_resource type="Texture2D" uid="uid://drewufpc4sf64" path="res://resources/Sprites/levelEndDoor-Sheet.png" id="1_pgx7h"]
[ext_resource type="Script" uid="uid://cfnotqwi0ab8h" path="res://Scripts/interact_area.gd" id="2_mk7qj"]
[ext_resource type="Texture2D" uid="uid://b43kqjwlgpfot" path="res://resources/Sprites/InteractKey-E.png" id="2_pgx7h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pgx7h"]
atlas = ExtResource("1_pgx7h")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg72h"]
atlas = ExtResource("1_pgx7h")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqnd3"]
atlas = ExtResource("1_pgx7h")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1c0s"]
atlas = ExtResource("1_pgx7h")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv03t"]
atlas = ExtResource("1_pgx7h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk7qj"]
atlas = ExtResource("1_pgx7h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mo6f"]
atlas = ExtResource("1_pgx7h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78aic"]
atlas = ExtResource("1_pgx7h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy58l"]
atlas = ExtResource("1_pgx7h")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nje3"]
atlas = ExtResource("1_pgx7h")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p1xy"]
atlas = ExtResource("1_pgx7h")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fg72h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgx7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg72h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqnd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1c0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv03t")
}],
"loop": false,
"name": &"Closing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk7qj")
}],
"loop": false,
"name": &"Default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mo6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78aic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy58l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nje3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p1xy")
}],
"loop": false,
"name": &"Opening",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgx7h"]
size = Vector2(20, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk7qj"]
size = Vector2(47, 39)

[node name="EndOfLevelDoor" type="StaticBody2D"]
script = ExtResource("1_mk7qj")

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fg72h")
animation = &"Opening"
frame = 4
frame_progress = 1.0

[node name="BaseCollShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_pgx7h")

[node name="InteractionArea2D" type="Area2D" parent="."]
script = ExtResource("2_mk7qj")
metadata/_custom_type_script = "uid://cfnotqwi0ab8h"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea2D"]
position = Vector2(0.5, -3.5)
shape = SubResource("RectangleShape2D_mk7qj")

[node name="InteractionSprite" type="Sprite2D" parent="."]
position = Vector2(0, -31)
texture = ExtResource("2_pgx7h")
